--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
   },
   "devDependencies": {
     "@reduxjs/toolkit": "^1.8.6",
+    "classnames": "^2.3.2",
+    "node-sass": "^7.0.3",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
