--- a/package.json
+++ b/package.json
@@ -37,11 +37,20 @@
   },
   "devDependencies": {
     "@reduxjs/toolkit": "^1.8.6",
+    "availity-reactstrap-validation": "^2.7.1",
+    "axios": "^1.1.3",
     "classnames": "^2.3.2",
+    "formik": "^2.2.9",
     "node-sass": "^7.0.3",
+    "rc-switch": "^4.0.0",
+    "react-contextmenu": "^2.14.0",
+    "react-datepicker": "^4.8.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
-    "reactstrap": "^9.1.5"
+    "react-select": "^5.5.8",
+    "react-tagsinput": "^3.20.0",
+    "reactstrap": "^8.9.0",
+    "yup": "^0.32.11"
   }
 }
