--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "reactstrap": "^8.9.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -41,6 +42,7 @@
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
     "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
     "node-sass": "^7.0.3",
     "rc-switch": "^4.0.0",
     "react-contextmenu": "^2.14.0",
@@ -51,7 +53,7 @@
     "react-select": "^5.5.8",
     "react-tagsinput": "^3.20.0",
     "react-toastify": "^9.1.0",
-    "reactstrap": "^8.9.0",
+    "redux-persist": "^6.0.0",
     "yup": "^0.32.11"
   }
 }
