--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "rc-switch": "^4.0.0",
     "react-contextmenu": "^2.14.0",
     "react-datepicker": "^4.8.0",
+    "react-moment": "^1.1.2",
+    "react-number-format": "^5.1.1",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
