--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_BASE_URL = http://192.168.4.89:8080/api
+# REACT_APP_BASE_URL = http://192.168.4.89:8080/api
+REACT_APP_BASE_URL = http://192.168.1.8:8080/api
