--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "availity-reactstrap-validation": "^2.7.1",
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
+    "dayjs": "^1.11.6",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
     "node-sass": "^7.0.3",
@@ -53,6 +54,8 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-select": "^5.5.8",
+    "react-super-responsive-table": "^5.2.1",
+    "react-table": "^7.8.0",
     "react-tagsinput": "^3.20.0",
     "react-toastify": "^9.1.0",
     "redux-persist": "^6.0.0",
